--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
-    <string name="app_name">ChocolateApp</string>
+    <string name="app_name">Choco38</string>
     <string name="chocolate">Шоколад</string>
     <string name="sets">Наборы</string>
     <string name="forms">Формы</string>
     <string name="order">Заказ</string>
+    <string name="price_grams">%s ₽/100 гр </string>
+    <string name="weight">%s гр </string>
+    <string name="price">%s  ₽</string>
+    <string name="add_to_cart">Добавить</string>
+    <string name="total_price">Стоимость: %s ₽</string>
+    <string name="order_items">Заказать</string>
+    <string name="delete_from_cart">Удалить из корзины</string>
 </resources>
