--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="total_price">Стоимость: %s ₽</string>
     <string name="order_items">Заказать</string>
     <string name="delete_from_cart">Удалить из корзины</string>
+    <string name="nothing_choosed">Ничего не выбрано</string>
+    <string name="change">Изменить</string>
 </resources>
